<resources>
    <string name="app_name">Golden Cinema</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="re_password">Return Password</string>
    <string name="now">Now Showing </string>
    <string name="soon">Coming Soon</string>
    <string name="profile">Profile</string>
    <string name="theater">Theater</string>
    <string name="book">BOOK</string>
    <string name="MORE">MORE</string>
    <string-array name="type">
        <item>showing now</item>
        <item>coming soon</item>

    </string-array>
    <string name="search">Search by movie name</string>
    <string name="purchase">Purchase</string>
    <string name="valid">Form is valid</string>
    <string name="invalid">Form is invalid</string>
    <string name="light_theme_form">Light Theme</string>
    <string name="dark_theme_form">Dark Theme</string>
    <string name="scan_with_card_io">Scan with card.io</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
