<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/back" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/text_big"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin10"/>


        </Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/black_gray"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            >

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:hint="@string/name"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:inputType="textPassword"
                    android:hint="@string/re_password"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:backgroundTint="@color/white1"
                    android:hint="@string/phone"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/signup"
                android:id="@+id/signup"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium"
                android:background="@color/colorAccent"/>


        </LinearLayout>




    </LinearLayout>



</ScrollView>