<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            app:srcCompat="@drawable/logos"

            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            >

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/colorAccent"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email"
                    android:backgroundTint= "@color/white"

                    android:textColorLink="@color/colorAccent"
                    android:textColorHint="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColor="@color/white"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:backgroundTint= "@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPassword"
                    android:textColorLink="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"
                    android:textColor="@color/white"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/margin"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/signup"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorAccent"

                    android:textSize="@dimen/text_big"


                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>
        </LinearLayout>




    </LinearLayout>



</ScrollView>