<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    android:background="@color/colorPrimaryDark"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/profile"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/text_big"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginLeft="@dimen/margin10"/>


        </Toolbar>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:background="@color/black_gray"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            >

            <ImageView
                android:id="@+id/barcode"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/barcode"/>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:hint="@string/name"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/white1"
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/white1"
                android:textColorHighlight="@color/white1"
                android:layout_margin="@dimen/margin10"
                >


                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:backgroundTint="@color/white1"
                    android:hint="@string/phone"
                    android:textColorLink="@color/white1"
                    android:textColorHint="@color/white1"
                    android:textColorHighlight="@color/white1"
                    android:textColor="@color/white1"/>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="update"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium"
                android:background="@color/colorAccent"/>


        </LinearLayout>



        <LinearLayout
            android:visibility="visible"
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:background="@color/black_gray"
            android:layout_marginRight="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin10"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/profile1"/>



            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="login"

                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium"
                android:background="@color/colorAccent"/>


        </LinearLayout>


    </LinearLayout>



</ScrollView>